--- a/coffee-house/sass/style.scss
+++ b/coffee-house/sass/style.scss
@@ -3,8 +3,19 @@
 // Abstract
 @import "abstract/constants";
 @import "abstract/mixins";
+@import "abstract/placeholders";
 
-//
+// Layouts
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/body";
+@import "layouts/wrappers";
+
+// Base
+@import "base/logo";
+@import "base/base";
+@import "base/buttons";
+@import "base/animations";
+
+// Components
+@import "components/navigation";
