--- a/coffee-house/sass/base/_base.scss
+++ b/coffee-house/sass/base/_base.scss
@@ -1,3 +1,23 @@
 html {
   font-size: 10px;
 }
+
+body {
+  @extend %font-primary;
+  @include font($size: 1.6rem, $height: 150%, $weight: 400);
+}
+
+h1 {
+  @include font($size: 7.2rem, $height: 105%, $weight: 600);
+  margin: 0;
+}
+
+h2 {
+  @include font($size: 6rem, $height: 125%, $weight: 600);
+  margin: 0;
+}
+
+h3 {
+  @include font($size: 2.4rem, $height: 125%, $weight: 600);
+  margin: 0;
+}
