--- a/coffee-house/sass/components/_brand.scss
+++ b/coffee-house/sass/components/_brand.scss
@@ -1,6 +1,6 @@
 .brand {
   max-width: 1360px;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   padding: 100px;
   border-radius: 40px;
   background: url("../assets/img-hero.png") lightgray 50% / cover no-repeat;
