feat: footer added

--- a/coffee-house/sass/base/_animations.scss
+++ b/coffee-house/sass/base/_animations.scss
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: -3px;
   height: 2px;
-  background-color: #403F3D;
+  background-color: $text-dark;
   //transform-origin: left;
   left: 0;
   width: 100%;
