--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -409,6 +409,130 @@ header {
   font-weight: 600;
 }
 
+footer {
+  width: 1440px;
+  padding: 0 40px 40px 40px;
+  margin: 0 auto;
+}
+
+.footer {
+  display: flex;
+  gap: 100px;
+  padding: 100px;
+  background-color: #665F55;
+  border-radius: 40px;
+}
+
+.contact-us {
+  width: 530px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+  color: #E1D4C9;
+}
+.contact-us__link {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+.contact-us .item {
+  font-weight: 600;
+}
+.contact-us .item a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: #E1D4C9;
+  margin-bottom: 4px;
+}
+.contact-us .item a p {
+  margin: 0;
+}
+.contact-us .link-animation:before {
+  background-color: #E1D4C9;
+}
+.contact-us .img {
+  width: 20px;
+  height: 20px;
+  align-self: flex-start;
+}
+.contact-us .img-pin {
+  background: url("../assets/icons/pin-alt.svg");
+}
+.contact-us .img-phone {
+  background: url("../assets/icons/phone.svg");
+}
+.contact-us .img-clock {
+  background: url("../assets/icons/clock.svg");
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  width: 530px;
+}
+.social-media__header {
+  color: #E1D4C9;
+}
+.social-media__header i {
+  color: #B0907A;
+}
+
+.social-media__links {
+  display: flex;
+  gap: 12px;
+}
+.social-media__links .twitter,
+.social-media__links .instagram,
+.social-media__links .facebook {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+  border: 1px solid #C1B6AD;
+}
+.social-media__links .icon-twitter,
+.social-media__links .icon-instagram,
+.social-media__links .icon-facebook {
+  height: 24px;
+  width: 24px;
+  transition: background 1s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+.social-media__links .icon-twitter {
+  background: url("../assets/icons/twitter.svg") no-repeat;
+}
+.social-media__links .icon-instagram {
+  background: url("../assets/icons/instagram.svg") no-repeat;
+}
+.social-media__links .icon-facebook {
+  background: url("../assets/icons/facebook.svg") no-repeat;
+}
+.social-media__links .social-media-link {
+  transition: background-color 1s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+
+.social-media-link:hover {
+  background-color: #E1D4C9;
+}
+.social-media-link:hover .icon-twitter {
+  background: url("../assets/icons/twitter-hover.svg") no-repeat;
+}
+.social-media-link:hover .icon-instagram {
+  background: url("../assets/icons/instagram-hover.svg") no-repeat;
+}
+.social-media-link:hover .icon-facebook {
+  background: url("../assets/icons/facebook-hover.svg") no-repeat;
+}
+
 .wrapper {
   width: 1440px;
   margin: 0 auto;
