--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -1019,4 +1019,59 @@ main .hidden-header {
   background-color: #665F55;
 }
 
+.preview {
+  width: 1440px;
+  padding: 0 40px;
+  margin: 0 auto 100px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 40px;
+}
+
+.card {
+  display: flex;
+  height: 506px;
+  width: 310px;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 40px;
+  border: 1px solid #C1B6AD;
+}
+.card__photo {
+  height: 310px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 40px;
+  flex-shrink: 0;
+}
+.card__photo img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out;
+}
+.card__description {
+  display: flex;
+  flex: 1 0 0;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.card__description p {
+  margin: 0 0 auto;
+}
+.card h3:first-child {
+  margin-bottom: 12px;
+}
+.card h3:last-child {
+  margin-bottom: -2px;
+}
+.card:hover img {
+  transform: scale(1);
+}
+
 /*# sourceMappingURL=style.css.map */
