refactor: dsabled navigation link animate in menu page

--- a/coffee-house/sass/base/_animations.scss
+++ b/coffee-house/sass/base/_animations.scss
@@ -2,7 +2,7 @@
 .link-animation:before {
   content: "";
   position: absolute;
-  bottom: -3px;
+  bottom: -1px;
   height: 2px;
   background-color: $text-dark;
   //transform-origin: left;
@@ -19,4 +19,19 @@
 
 .link-animation {
   position: relative;
+}
+// link hovered in menu page means that the link doesn't animate
+.link-hovered {
+  position: relative;
+}
+.link-hovered:before {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  height: 2px;
+  background-color: $text-dark;
+  transform-origin: left;
+  left: 0;
+  width: 100%;
+  transform: scaleX(1);
 }
