--- a/coffee-house/sass/components/_preview.scss
+++ b/coffee-house/sass/components/_preview.scss
@@ -18,6 +18,7 @@
   align-items: center;
   border-radius: 40px;
   border: 1px solid $border-light;
+  cursor: pointer;
 
   &__photo {
     height: 310px;
