--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -559,6 +559,7 @@ footer {
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -1053,6 +1054,7 @@ main .hidden-header {
   align-items: center;
   border-radius: 40px;
   border: 1px solid #C1B6AD;
+  cursor: pointer;
 }
 .card__photo {
   height: 310px;
