--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -552,8 +552,14 @@ footer {
   width: 100px;
 }
 
+.header__logo img {
+  height: 60px;
+  width: 100px;
+}
+
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -695,7 +701,7 @@ h3 {
 .link-animation:before {
   content: "";
   position: absolute;
-  bottom: -3px;
+  bottom: -1px;
   height: 2px;
   background-color: #403F3D;
   left: 0;
@@ -711,6 +717,22 @@ h3 {
 
 .link-animation {
   position: relative;
+}
+
+.link-hovered {
+  position: relative;
+}
+
+.link-hovered:before {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  height: 2px;
+  background-color: #403F3D;
+  transform-origin: left;
+  left: 0;
+  width: 100%;
+  transform: scaleX(1);
 }
 
 .main-navigation {
@@ -937,6 +959,137 @@ h3 {
 .app__buttons {
   display: flex;
   gap: 20px;
+}
+
+main .hidden-header {
+  height: 0;
+}
+
+.offer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  width: 1440px;
+  margin: 0 auto 40px auto;
+  padding: 0 40px;
+}
+.offer__title {
+  width: 800px;
+  text-align: center;
+  color: #403F3D;
+}
+.offer__title i {
+  color: #B0907A;
+}
+.offer__tabs {
+  display: flex;
+  width: 361px;
+  gap: 16px;
+  font-weight: 600;
+}
+.offer__tabs .tab {
+  display: flex;
+  padding: 7px 16px 7px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  border-radius: 100px;
+  border: 1px solid #C1B6AD;
+  cursor: pointer;
+  transition: background-color 0.8s ease, border 0.8s ease;
+}
+.offer__tabs .tab p {
+  margin: 0;
+}
+.offer__tabs .tab .img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3px 7px;
+  height: 30px;
+  width: 30px;
+  border-radius: 100px;
+  background-color: #C1B6AD;
+}
+.offer__tabs .tab .img-coffee,
+.offer__tabs .tab .img-tea,
+.offer__tabs .tab .img-dessert {
+  height: 16px;
+  width: 16px;
+}
+.offer__tabs .tab .img-coffee {
+  background: url("../assets/icons/coffee-menu-nav.svg") no-repeat;
+}
+.offer__tabs .tab .img-tea {
+  background: url("../assets/icons/tea-menu-nav.svg") no-repeat;
+}
+.offer__tabs .tab .img-dessert {
+  background: url("../assets/icons/dessert-menu-nav.svg") no-repeat;
+}
+.offer__tabs .tab:hover {
+  border: 1px solid #665F55;
+  background-color: #665F55;
+}
+.offer .active {
+  border: 1px solid #665F55;
+  background-color: #665F55;
+}
+
+.preview {
+  width: 1440px;
+  padding: 0 40px;
+  margin: 0 auto 100px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 40px;
+}
+
+.card {
+  display: flex;
+  height: 506px;
+  width: 310px;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 40px;
+  border: 1px solid #C1B6AD;
+  cursor: pointer;
+}
+.card__photo {
+  height: 310px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 40px;
+  flex-shrink: 0;
+}
+.card__photo img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out;
+}
+.card__description {
+  display: flex;
+  flex: 1 0 0;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.card__description p {
+  margin: 0 0 auto;
+}
+.card h3:first-child {
+  margin-bottom: 12px;
+}
+.card h3:last-child {
+  margin-bottom: -2px;
+}
+.card:hover img {
+  transform: scale(1);
 }
 
 /*# sourceMappingURL=style.css.map */
