--- a/coffee-house/sass/style.scss
+++ b/coffee-house/sass/style.scss
@@ -22,3 +22,5 @@
 @import "components/slider";
 @import "components/gallery";
 @import "components/app";
+@import "components/offer";
+@import "components/preview";
