--- a/coffee-house/sass/components/_preview.scss
+++ b/coffee-house/sass/components/_preview.scss
@@ -37,13 +37,14 @@
 
   &__description {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
     flex: 1 0 0;
     height: 100%;
     width: 100%;
     padding: 20px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+    color: $text-dark;
 
     p {
       margin: 0 0 auto;
