--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -994,10 +994,11 @@ main .hidden-header {
   justify-content: center;
   align-items: center;
   gap: 7px;
+  color: #403F3D;
   border-radius: 100px;
   border: 1px solid #C1B6AD;
   cursor: pointer;
-  transition: background-color 0.8s ease, border 0.8s ease;
+  transition: background-color 0.8s ease, border 0.8s ease, color 0.8s ease;
 }
 .offer__tabs .tab p {
   margin: 0;
@@ -1028,10 +1029,12 @@ main .hidden-header {
   background: url("../assets/icons/dessert-menu-nav.svg") no-repeat;
 }
 .offer__tabs .tab:hover {
+  color: #E1D4C9;
   border: 1px solid #665F55;
   background-color: #665F55;
 }
 .offer .active {
+  color: #E1D4C9;
   border: 1px solid #665F55;
   background-color: #665F55;
 }
@@ -1071,13 +1074,14 @@ main .hidden-header {
 }
 .card__description {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   flex: 1 0 0;
   height: 100%;
   width: 100%;
   padding: 20px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
+  color: #403F3D;
 }
 .card__description p {
   margin: 0 0 auto;
