--- a/coffee-house/sass/base/_buttons.scss
+++ b/coffee-house/sass/base/_buttons.scss
@@ -3,6 +3,7 @@
   width: 200px;
   height: 64px;
   font-weight: 600;
+  text-decoration: none;
   color: $text-dark;
   border-radius: 100px;
   border: 1px solid $border-dark;
