--- a/coffee-house/sass/base/_animations.scss
+++ b/coffee-house/sass/base/_animations.scss
@@ -22,6 +22,7 @@
 }
 // link hovered in menu page means that the link doesn't animate
 .link-hovered {
+  cursor: auto;
   position: relative;
 }
 .link-hovered:before {
