--- a/coffee-house/sass/components/_offer.scss
+++ b/coffee-house/sass/components/_offer.scss
@@ -83,6 +83,7 @@ main {
     }
   }
   .active {
+    cursor: auto;
     color: $text-light;
     border: 1px solid $background-container;
     background-color: $background-container;
