--- a/coffee-house/sass/layouts/_header.scss
+++ b/coffee-house/sass/layouts/_header.scss
@@ -1,3 +1,44 @@
 header {
   font-weight: 600;
 }
+// header logo
+.logo-object {
+  height: 60px;
+  width: 100px;
+}
+.header__logo {
+  img {
+    height: 60px;
+    width: 100px;
+  }
+}
+// header navigation
+.main-navigation {
+  display: flex;
+  gap: 40px;
+}
+
+.main-navigation__link a {
+  text-decoration: none;
+  color: $text-dark;
+}
+
+// header menu link button
+.header-menu-button {
+  margin-left: 1px;
+}
+
+.cup-icon {
+  height: 20px;
+  width: 20px;
+  margin-top: 1px;
+}
+
+.header-menu-button__link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: $text-dark;
+  padding-top: 15px;
+}
