--- a/coffee-house/sass/components/_preview.scss
+++ b/coffee-house/sass/components/_preview.scss
@@ -59,9 +59,11 @@
     margin-bottom: -2px;
   }
 
-  &:hover {
-    img {
-      transform: scale(1);
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      img {
+        transform: scale(1);
+      }
     }
   }
 }
