--- a/coffee-house/sass/layouts/_header.scss
+++ b/coffee-house/sass/layouts/_header.scss
@@ -1,6 +1,16 @@
 header {
   font-weight: 600;
 }
+
+.header__wrapper {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+
 // header logo
 .logo-object {
   height: 60px;
@@ -42,3 +52,10 @@ header {
   color: $text-dark;
   padding-top: 15px;
 }
+
+@media (max-width: 1439px) {
+  .wrapper {
+    width: auto;
+  }
+}
+@media (max-width: 768px) {}
