--- a/coffee-house/sass/base/_buttons.scss
+++ b/coffee-house/sass/base/_buttons.scss
@@ -12,7 +12,7 @@
   user-select: none;
 }
 
-// brand section button with cup animation
+// Enjoy brand section button with cup animation
 .button-icon-cup {
   display: flex;
   align-items: center;
@@ -28,6 +28,16 @@
     margin-left: 8px;
     opacity: 0;
     transition: opacity 1s ease;
+  }
+
+  @media (hover: none) and (pointer: coarse) {
+    span {
+      transform: translate(-14px);
+    }
+
+    .cup-icon {
+      opacity: 1;
+    }
   }
 
   @media (hover: hover) and (pointer: fine) {
