--- a/coffee-house/sass/components/_brand.scss
+++ b/coffee-house/sass/components/_brand.scss
@@ -1,3 +1,6 @@
+.enjoy {
+  padding: 0 40px;
+}
 .brand {
   max-width: 1360px;
   margin: 0 auto 100px auto;
@@ -24,5 +27,10 @@
 
   h1 i {
     color: $text-accent;
+  }
+}
+@media (max-width: 1439px) {
+  .brand {
+    padding: 100px 60px;
   }
 }
