--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -660,6 +660,14 @@ h3 {
   opacity: 0;
   transition: opacity 1s ease;
 }
+@media (hover: none) and (pointer: coarse) {
+  .button-icon-cup span {
+    transform: translate(-14px);
+  }
+  .button-icon-cup .cup-icon {
+    opacity: 1;
+  }
+}
 @media (hover: hover) and (pointer: fine) {
   .button-icon-cup:hover span {
     transform: translate(-14px);
@@ -759,6 +767,10 @@ h3 {
   transform: scaleX(1);
 }
 
+.enjoy {
+  padding: 0 40px;
+}
+
 .brand {
   max-width: 1360px;
   margin: 0 auto 100px auto;
@@ -785,6 +797,11 @@ h3 {
   color: #B0907A;
 }
 
+@media (max-width: 1439px) {
+  .brand {
+    padding: 100px 60px;
+  }
+}
 .slider {
   display: flex;
   flex-direction: column;
