--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -855,10 +855,10 @@ h3 {
 
 .switcher {
   display: flex;
+  flex: 0 0 60px;
   justify-content: center;
   align-items: center;
   height: 60px;
-  width: 60px;
   box-sizing: border-box;
   border-radius: 100px;
   border: 1px solid #665F55;
@@ -906,6 +906,14 @@ h3 {
   background-color: #665F55;
 }
 
+@media (max-width: 1439px) {
+  .slider {
+    width: auto;
+  }
+  .slider h2 {
+    text-align: center;
+  }
+}
 .gallery {
   display: flex;
   justify-content: center;
