--- a/coffee-house/sass/components/_app.scss
+++ b/coffee-house/sass/components/_app.scss
@@ -35,3 +35,41 @@
   display: flex;
   gap: 20px;
 }
+
+@media (max-width: 1439px) {
+  main {
+    container-type: inline-size;
+  }
+  .app {
+    width: auto;
+    container-type: inline-size;
+
+    gap: clamp(10px, 2cqi, 100px);
+
+    &__photo {
+      background: url("../assets/mobile-screens.png") center/clamp(300px,43.75cqi,630px) no-repeat;
+    }
+  }
+}
+
+@media (max-width: 930px) {
+  .main {
+    container-type: normal;
+  }
+
+  .app {
+    container-type: normal;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+
+    &__link {
+      align-items: flex-start;
+      width: 100%;
+    }
+
+    &__photo {
+      background: url("../assets/mobile-screens.png") no-repeat;
+    }
+  }
+}
